--- a/html/adminUser.html
+++ b/html/adminUser.html
@@ -104,16 +104,16 @@
                 style="width:100%; background-color: white; border: 1px solid #ddd; text-align: left; outline: 2px solid rgb(197, 197, 197);">
                 <thead style="background-color: #337ab7; color: white">
                     <tr>
-                        <td style="width:50%">
-                            <p>Correo</p>
+                        <td style="width:50%; min-width: 140px">
+                            <p style='word-break: break-all'>Correo</p>
                         </td>
-                        <td style="width: 20%">
+                        <td style="width: 20%; min-width: 140px">
                             <p style="text-align: left">Nombre</p>
                         </td>
-                        <td style="width: 20%">
+                        <td style="width: 20%; min-width: 140px">
                             <p style="text-align: left">Rol</p>
                         </td>
-                        <td style="min-width:220px">
+                        <td style="min-width:140px">
                             <p>Acciones</p>
                         </td>
                     </tr>
@@ -328,10 +328,24 @@
                 data = info.reduce((z, e, i) => z + '<tr><td>' + colNames[i] + ':' + '</td><td>' + (i == 0 ? e.children().last()[0].innerHTML : e.html()) + '</td></tr>', "")
                 return $("<div class='container' style='max-width: 90%'/>").append($('<table class="table table-bordered" style="max-width: 100%"/>').append(data)[0])
             }
+            const validateWindowWidth = () => {
+                if ($(window).width() > 698) {
+                    t.column(1).visible(true);
+                    t.column(2).visible(true);
+                    return
+                }
+                if ($(window).width() > 528) {
+                    t.column(1).visible(true);
+                    t.column(2).visible(false);
+                    return
+                }
+                t.column(1).visible(false);
+                t.column(2).visible(false);
+            }
             $('document').ready(() => {
                 user = JSON.parse(localStorage.getItem('user'))
                 user && $('#usrName').html(`Usuarios | ${getUserType(user.type)} <b>${user.name}</b>`);
-
+                $(window).resize(validateWindowWidth)
                 fetch('/admUsrNav', {
                     method: 'GET'
                 }).then(async e => {
@@ -417,6 +431,7 @@
                     sendData()
                 })
                 updateTableListener()
+                validateWindowWidth()
                 $('#tableReview_info').html("<p style='word-wrap: break-word; word-break: normal; white-space: normal'>" + $('#tableReview_info').html() + "</p>")
 
 
