--- a/html/fileManagement.html
+++ b/html/fileManagement.html
@@ -588,7 +588,7 @@
                 clicks++;
                 let x = e.target.tagName == 'TD' ? $(e.target).parent().children().toArray() : $(e.target).closest('td').parent().children().toArray(),
                     tr = $(e.target).closest('tr')[0]
-                if (clicks >= 2 && (x[1].innerHTML + "").toLowerCase() == 'carpeta') {
+                if (clicks >= 2 && t.data().toArray().find(x=>x.indexOf(tr.id)!=-1).indexOf('Carpeta')!=-1) {
                     clearTimeout()
                     if (!tree.includes(tr.id)) {
                         $('.breadcrumb li').removeClass("active");
@@ -738,7 +738,7 @@ const getTableData = info => {
     data = colNames.reduce((z, e, i) => z + '<tr><td style="max-width: 120px; background-color: #f9f9f9">' + colNames[i] + ':' + '</td><td><p style="word-break: break-all">' + (i == 0 ? $(info[0]).closest_descendent('p')[0].innerHTML : info[i]) + '</p></td></tr>', "")
     return $("<div style='margin-left: 5%; max-width: 90%; border-style: solid; border-width: 1px;'/>").append($('<table class="table table-bordered" style="max-width: 100%; margin-bottom: 0;" id="TableR"/>').append(data)[0])
 }
-        let validateWindowWidth = () => {
+        const validateWindowWidth = () => {
                 if ($(window).width() > 666) {
                     t.column(1).visible(true);
                     t.column(2).visible(true);
