--- a/html/indexUsr.html
+++ b/html/indexUsr.html
@@ -21,6 +21,7 @@
     <script src="/javascripts/snackbar.js" type="text/javascript"></script>
     <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
+    <script src="/javascripts/download.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="//cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css">
@@ -113,7 +114,7 @@
                 style="width:100%; background-color: white; border: 1px solid #ddd; text-align: left; outline: 2px solid rgb(197, 197, 197);">
                 <thead style="background-color: #337ab7; color: white">
                     <tr>
-                        <td style="width:50%">
+                        <td style="width:50%; min-width: 150px">
                             <p>Nombre</p>
                         </td>
                         <td style="min-width: 30px">
