max length on input

--- a/html/adminUser.html
+++ b/html/adminUser.html
@@ -143,13 +143,13 @@
                     <div class="modal-body" style="text-align: right;" id="modalBody">
                         <div class="tooltip">
                             <label for="nombre_usuario">Nombre de Usuario</label>&nbsp;&nbsp;
-                            <input type="text" id="nombre" name="nombre_usuario"
+                            <input maxlength="50" type="text" id="nombre" name="nombre_usuario"
                                 onkeypress="return validarLetras(event)">
                             <span class="tooltiptext">Nombre del usuario</span>
                         </div>
                         <div class="tooltip">
                             <label for="correo_usuario">Correo de usuario</label>&nbsp;&nbsp;
-                            <input type="text" id="correo" name="correo_usuario">
+                            <input maxlength="50" type="text" id="correo" name="correo_usuario">
                             <span class="tooltiptext">Usuario con el que se iniciará sesión
                                 `example@example.com`</span>
                         </div>
