--- a/html/profile.html
+++ b/html/profile.html
@@ -106,42 +106,42 @@
                             <hr style="max-width: 380px">
                             <div class="tooltip">
                                 <label for="nombre_usuario">Nombre</label>
-                                <input type="text" id="nombre" name="nombre_usuario"
+                                <input maxlength="50" type="text" id="nombre" name="nombre_usuario"
                                     onkeypress="return validarLetras(event)">
                                 <span class="tooltiptext">Tu nombre</span>
                             </div>
                             <hr style="max-width: 380px">
                             <div class="tooltip">
                                 <label for="correo_usuario">Correo</label>
-                                <input type="text" id="correo" name="correo_usuario">
+                                <input maxlength="50" type="text" id="correo" name="correo_usuario">
                                 <span class="tooltiptext">Con lo que se iniciará sesión
                                     `example@example.com`</span>
                             </div>
                             <hr style="max-width: 380px">
-                            <input class="button button_green" type="button" id="enviar" value="Guardar">
+                            <input maxlength="50" class="button button_green" type="button" id="enviar" value="Guardar">
                         </li>
                         <li>
                             <h3>Autenticación</h3>
                             <hr style="max-width: 380px">
                             <div class="tooltip">
                                 <label for="contOld">Contraseña actual</label>
-                                <input class="input_text" type="password" id="passOld" name="contOld">
+                                <input maxlength="50" class="input_text" type="password" id="passOld" name="contOld">
                                 <span class="tooltiptext">Ejemplo: 8?Jk7Ecd</span>
                             </div>
                             <hr style="max-width: 380px">
                             <div class="tooltip">
                                 <label for="contNew">Contraseña nueva</label>
-                                <input class="input_text" type="password" id="passNew" name="contNew">
+                                <input maxlength="50" class="input_text" type="password" id="passNew" name="contNew">
                                 <span class="tooltiptext">Ejemplo: 8?Jk7Ecd</span>
                             </div>
                             <hr style="max-width: 380px">
                             <div class="tooltip">
                                 <label for="contNew">Repita la contraseña</label>
-                                <input class="input_text" type="password" id="passNewR" name="contNew">
+                                <input maxlength="50" class="input_text" type="password" id="passNewR" name="contNew">
                                 <span class="tooltiptext">Ejemplo: 8?Jk7Ecd</span>
                             </div>
                             <hr style="max-width: 380px">
-                            <input class="button button_green" type="button" id="enviarPass" value="Cambiar">
+                            <input maxlength="50" class="button button_green" type="button" id="enviarPass" value="Cambiar">
                         </li>
                     </ul>
                 </form>
