--- a/html/adminRoot.html
+++ b/html/adminRoot.html
@@ -146,18 +146,18 @@
                         <div style="text-align: right;">
                             <div class="tooltip">
                                 <label for="nombre_organizacion">Nombre de org</label>&nbsp;&nbsp;
-                                <input type="text" id="nombreO" name="nombre_organizacion" maxlength="30">
+                                <input maxlength="50" type="text" id="nombreO" name="nombre_organizacion" maxlength="30">
                                 <span class="tooltiptext">Nombre de Organización</span>
                             </div>
                             <div class="tooltip">
                                 <label for="nombre_usuario">Nombre de admin</label>&nbsp;&nbsp;
-                                <input type="text" id="nombre" name="nombre_usuario"
+                                <input maxlength="50" type="text" id="nombre" name="nombre_usuario"
                                     onkeypress="return validarLetras(event)">
                                 <span class="tooltiptext">Nombre del usuario</span>
                             </div>
                             <div class="tooltip">
                                 <label for="correo_usuario">Correo de admin</label>&nbsp;&nbsp;
-                                <input type="text" id="correo" onkeyup="filterFunction()">
+                                <input maxlength="50" type="text" id="correo" onkeyup="filterFunction()">
                                 <div class="dropdown">
                                     <div id="myDropdown" class="dropdown-content">
                                     </div>
