--- a/html/login.html
+++ b/html/login.html
@@ -262,7 +262,7 @@
             <form id="login_form" class="login_form max_width" onsubmit="iniciarSesion()">
                 <div class="input_group">
                     <label>Ingrese su correo de usuario</label>
-                    <input class="input_text" id="email" type="text" placeholder="Usuario">
+                    <input maxlength="50" class="input_text" id="email" type="text" placeholder="Usuario">
                     <span id = 'move'
                         style="position: absolute; left: calc(50% + 75px); bottom: calc(50% - 125px); font-size: 10px"><a
                             href="">Olvidó su contraseña</a><i class="fas fa-question-circle"
@@ -271,35 +271,35 @@
                 </div>
                 <br>
                 <div class="button_group">
-                    <input class="button button_green" id="button_entrar" type="submit" value="Siguiente">
+                    <input maxlength="50" class="button button_green" id="button_entrar" type="submit" value="Siguiente">
                 </div>
             </form>
             <form title="Cambio de contraseña" id="change_pass" onsubmit="changePass()" class="login_form min_width"
                 style="opacity: 0">
                 <div class="input_group">
                     <label>Establezca su nueva contraseña</label>
-                    <input class="input_text" id="contrasenac" type="password" placeholder="Contraseña">
-                    <input class="input_text" id="contrasenac1" type="password" placeholder="Repita la Contraseña">
-                    <label for="session">Recordarme&nbsp;<input id ='sesP' type="checkbox" name="session" value="session"></label>
+                    <input maxlength="50" class="input_text" id="contrasenac" type="password" placeholder="Contraseña">
+                    <input maxlength="50" class="input_text" id="contrasenac1" type="password" placeholder="Repita la Contraseña">
+                    <label for="session">Recordarme&nbsp;<input maxlength="50" id ='sesP' type="checkbox" name="session" value="session"></label>
                 </div>
                 <br>
                 <div class="button_group">
-                    <input class="button button_green" id="button_entrar" type="submit" value="Cambiar">
+                    <input maxlength="50" class="button button_green" id="button_entrar" type="submit" value="Cambiar">
                 </div>
             </form>
             <form id="login_form2" class="login_form min_width" onsubmit="iniciarSesion2()"
                 style="margin-left:0px;opacity: 0">
                 <div class="input_group">
                     <label>Ingrese su contraseña</label>
-                    <input class="input_text" id="contrasena" type="password" placeholder="Contraseña">
-                    <label for="session">Recordarme&nbsp;<input id ='sesL' type="checkbox" name="session" value="session"></label>
+                    <input maxlength="50" class="input_text" id="contrasena" type="password" placeholder="Contraseña">
+                    <label for="session">Recordarme&nbsp;<input maxlength="50" id ='sesL' type="checkbox" name="session" value="session"></label>
                     <span id="contr" style="display:none; position: absolute; left: calc(50% + 75px); bottom: calc(50% - 145px); font-size: 10px"><a
                             href="">Olvidó su contraseña</a><i class="fas fa-question-circle"
                             style="color:rgba(51,153,255,0.5);"></i></span>
                 </div>
                 <br>
                 <div class="button_group">
-                    <input class="button button_green" id="button_entrar" type="submit" value="Iniciar Sesión">
+                    <input maxlength="50" class="button button_green" id="button_entrar" type="submit" value="Iniciar Sesión">
                 </div>
             </form>
         </div>
