--- a/html/indexUsr.html
+++ b/html/indexUsr.html
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-header">
-                        <h2 class='orgName'>Mesa de trabajo</h2>
+                        <h2 class='orgName' id='orgName'>Mesa de trabajo</h2>
                         <em id='usrName'>Usuario</em>
                     </div>
                 </div>
